use ProcessBuilder to create process